[package]
name = "youtube_dl"
version = "0.6.2"
authors = ["Martin Tomasi <martin.tomasi@gmail.com>"]
edition = "2018"
description = "Runs youtube-dl and parses its JSON output."
license = "MIT/Apache-2.0"
repository = "https://github.com/GyrosOfWar/youtube-dl-rs"
homepage = "https://github.com/GyrosOfWar/youtube-dl-rs"
categories = ["multimedia::video"]
keywords = ["youtube-dl", "youtube"]

[dependencies]
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
log = "0.4.14"
wait-timeout = "0.2.0"
