[package]
name = "youtube_dl"
version = "0.10.0"
authors = ["Martin Tomasi <martin.tomasi@gmail.com>"]
edition = "2021"
description = "Runs yt-dlp and parses its JSON output."
license = "MIT/Apache-2.0"
repository = "https://github.com/GyrosOfWar/youtube-dl-rs"
homepage = "https://github.com/GyrosOfWar/youtube-dl-rs"
categories = ["multimedia::video"]
keywords = ["youtube-dl", "youtube", "yt-dlp"]

[features]
default = []
downloader-native-tls = ["reqwest", "tokio", "reqwest/native-tls"]
downloader-rustls-tls = ["reqwest", "tokio", "reqwest/rustls-tls"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
wait-timeout = "0.2"
tokio = { version = "1", optional = true, features = ["io-util", "process", "time", "fs"] }
reqwest = { version = "0.12", optional = true, features = ["json"], default-features = false }

[dev-dependencies]
env_logger = "0.11"
tempfile = "3.7.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[[example]]
name = "async"
required-features = ["tokio"]

[[example]]
name = "downloader"
required-features = ["downloader-rustls-tls"]

[package.metadata.docs.rs]
all-features = true
